[gd_scene load_steps=21 format=4 uid="uid://ibap3me2w1n"]

[ext_resource type="Script" path="res://scenes/maps/gym.gd" id="1_n8g7i"]
[ext_resource type="Texture2D" uid="uid://cveavgbeeukxv" path="res://assets/tiles/rooms/TopDownHouse_FloorsAndWalls.png" id="1_sfawu"]
[ext_resource type="PackedScene" uid="uid://cbwa2yt5xe6aj" path="res://scenes/window_dialogue_final.tscn" id="2_b4bb7"]
[ext_resource type="PackedScene" uid="uid://plq0xuq5ke1w" path="res://scenes/player/player.tscn" id="2_q7xv4"]
[ext_resource type="Texture2D" uid="uid://b724csixh1572" path="res://assets/items/mancuernas.png" id="4_j2yss"]
[ext_resource type="Texture2D" uid="uid://coo373phjcv48" path="res://assets/ui/button.png" id="4_pcgpx"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mqdlo"]
texture = ExtResource("1_sfawu")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0

[sub_resource type="TileSet" id="TileSet_oydnp"]
sources/0 = SubResource("TileSetAtlasSource_mqdlo")

[sub_resource type="SegmentShape2D" id="SegmentShape2D_y6csq"]
b = Vector2(256, 0)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_mcn57"]
b = Vector2(0, 194)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2ehvj"]
radius = 13.0
height = 40.0

[sub_resource type="Theme" id="Theme_fg3id"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ftycn"]
texture = ExtResource("4_pcgpx")
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qkciq"]
texture = ExtResource("4_pcgpx")
modulate_color = Color(1, 0.508591, 0.0257265, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6sedx"]
texture = ExtResource("4_pcgpx")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_myhdb"]

[sub_resource type="Theme" id="Theme_6cvfi"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_1sn1x"]
texture = ExtResource("4_pcgpx")
modulate_color = Color(0.601223, 0.601223, 0.601223, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ctrdq"]
texture = ExtResource("4_pcgpx")
modulate_color = Color(1, 0.508591, 0.0257265, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5xa0j"]
texture = ExtResource("4_pcgpx")

[node name="Gym" type="Node2D"]
script = ExtResource("1_n8g7i")
TextScene = ExtResource("2_b4bb7")

[node name="TextureRect" type="ColorRect" parent="."]
offset_left = -195.0
offset_top = -160.0
offset_right = 460.0
offset_bottom = 322.0
color = Color(0, 0, 0, 1)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAUAAAAAAAEAAAABAAYAAAAAAAIAAAABAAcAAAABAAAAAAACAAUAAAABAAEAAAACAAYAAAABAAIAAAACAAcAAAACAAAAAAADAAUAAAACAAEAAAADAAYAAAACAAIAAAADAAcAAAADAAAAAAAEAAUAAAADAAEAAAAEAAYAAAADAAIAAAAEAAcAAAAAAAMAAAABAAUAAAAAAAQAAAABAAYAAAAAAAUAAAABAAcAAAABAAMAAAACAAUAAAABAAQAAAACAAYAAAABAAUAAAACAAcAAAACAAMAAAADAAUAAAACAAQAAAADAAYAAAACAAUAAAADAAcAAAADAAMAAAAEAAUAAAADAAQAAAAEAAYAAAADAAUAAAAEAAcAAAAEAAAAAAABAAUAAAAEAAEAAAABAAYAAAAEAAIAAAABAAcAAAAFAAAAAAACAAUAAAAFAAEAAAACAAYAAAAFAAIAAAACAAcAAAAGAAAAAAADAAUAAAAGAAEAAAADAAYAAAAGAAIAAAADAAcAAAAHAAAAAAAEAAUAAAAHAAEAAAAEAAYAAAAHAAIAAAAEAAcAAAAEAAMAAAABAAUAAAAEAAQAAAABAAYAAAAEAAUAAAABAAcAAAAFAAMAAAACAAUAAAAFAAQAAAACAAYAAAAFAAUAAAACAAcAAAAGAAMAAAADAAUAAAAGAAQAAAADAAYAAAAGAAUAAAADAAcAAAAHAAMAAAAEAAUAAAAHAAQAAAAEAAYAAAAHAAUAAAAEAAcAAAAIAAAAAAABAAUAAAAIAAEAAAABAAYAAAAIAAIAAAABAAcAAAAJAAAAAAACAAUAAAAJAAEAAAACAAYAAAAJAAIAAAACAAcAAAAKAAAAAAADAAUAAAAKAAEAAAADAAYAAAAKAAIAAAADAAcAAAALAAAAAAAEAAUAAAALAAEAAAAEAAYAAAALAAIAAAAEAAcAAAAIAAMAAAABAAUAAAAIAAQAAAABAAYAAAAIAAUAAAABAAcAAAAJAAMAAAACAAUAAAAJAAQAAAACAAYAAAAJAAUAAAACAAcAAAAKAAMAAAADAAUAAAAKAAQAAAADAAYAAAAKAAUAAAADAAcAAAALAAMAAAAEAAUAAAALAAQAAAAEAAYAAAALAAUAAAAEAAcAAAAMAAAAAAABAAUAAAAMAAEAAAABAAYAAAAMAAIAAAABAAcAAAANAAAAAAACAAUAAAANAAEAAAACAAYAAAANAAIAAAACAAcAAAAOAAAAAAADAAUAAAAOAAEAAAADAAYAAAAOAAIAAAADAAcAAAAPAAAAAAAEAAUAAAAPAAEAAAAEAAYAAAAPAAIAAAAEAAcAAAAMAAMAAAABAAUAAAAMAAQAAAABAAYAAAAMAAUAAAABAAcAAAANAAMAAAACAAUAAAANAAQAAAACAAYAAAANAAUAAAACAAcAAAAOAAMAAAADAAUAAAAOAAQAAAADAAYAAAAOAAUAAAADAAcAAAAPAAMAAAAEAAUAAAAPAAQAAAAEAAYAAAAPAAUAAAAEAAcAAAAAAAYAAAABAAUAAAAAAAcAAAABAAYAAAAAAAgAAAABAAcAAAABAAYAAAACAAUAAAABAAcAAAACAAYAAAABAAgAAAACAAcAAAACAAYAAAADAAUAAAACAAcAAAADAAYAAAACAAgAAAADAAcAAAADAAYAAAAEAAUAAAADAAcAAAAEAAYAAAADAAgAAAAEAAcAAAAEAAYAAAABAAUAAAAEAAcAAAABAAYAAAAEAAgAAAABAAcAAAAFAAYAAAACAAUAAAAFAAcAAAACAAYAAAAFAAgAAAACAAcAAAAGAAYAAAADAAUAAAAGAAcAAAADAAYAAAAGAAgAAAADAAcAAAAHAAYAAAAEAAUAAAAHAAcAAAAEAAYAAAAHAAgAAAAEAAcAAAAIAAYAAAABAAUAAAAIAAcAAAABAAYAAAAIAAgAAAABAAcAAAAJAAYAAAACAAUAAAAJAAcAAAACAAYAAAAJAAgAAAACAAcAAAAKAAYAAAADAAUAAAAKAAcAAAADAAYAAAAKAAgAAAADAAcAAAALAAYAAAAEAAUAAAALAAcAAAAEAAYAAAALAAgAAAAEAAcAAAAMAAYAAAABAAUAAAAMAAcAAAABAAYAAAAMAAgAAAABAAcAAAANAAYAAAACAAUAAAANAAcAAAACAAYAAAANAAgAAAACAAcAAAAOAAYAAAADAAUAAAAOAAcAAAADAAYAAAAOAAgAAAADAAcAAAAPAAYAAAAEAAUAAAAPAAcAAAAEAAYAAAAPAAgAAAAEAAcAAAAAAAkAAAAJAAUAAAAAAAoAAAAJAAYAAAAAAAsAAAAJAAcAAAABAAkAAAAKAAUAAAABAAoAAAAKAAYAAAABAAsAAAAKAAcAAAACAAkAAAALAAUAAAACAAoAAAALAAYAAAACAAsAAAALAAcAAAADAAkAAAAMAAUAAAADAAoAAAAMAAYAAAADAAsAAAAMAAcAAAAEAAkAAAAJAAUAAAAEAAoAAAAJAAYAAAAEAAsAAAAJAAcAAAAFAAkAAAAKAAUAAAAFAAoAAAAKAAYAAAAFAAsAAAAKAAcAAAAGAAkAAAALAAUAAAAGAAoAAAALAAYAAAAGAAsAAAALAAcAAAAHAAkAAAAMAAUAAAAHAAoAAAAMAAYAAAAHAAsAAAAMAAcAAAAIAAkAAAAJAAUAAAAIAAoAAAAJAAYAAAAIAAsAAAAJAAcAAAAJAAkAAAAKAAUAAAAJAAoAAAAKAAYAAAAJAAsAAAAKAAcAAAAKAAkAAAALAAUAAAAKAAoAAAALAAYAAAAKAAsAAAALAAcAAAALAAkAAAAMAAUAAAALAAoAAAAMAAYAAAALAAsAAAAMAAcAAAAMAAkAAAAJAAUAAAAMAAoAAAAJAAYAAAAMAAsAAAAJAAcAAAANAAkAAAAKAAUAAAANAAoAAAAKAAYAAAANAAsAAAAKAAcAAAAOAAkAAAALAAUAAAAOAAoAAAALAAYAAAAOAAsAAAALAAcAAAAPAAkAAAAMAAUAAAAPAAoAAAAMAAYAAAAPAAsAAAAMAAcAAAA=")
tile_set = SubResource("TileSet_oydnp")

[node name="Limit" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limit"]
shape = SubResource("SegmentShape2D_y6csq")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limit"]
position = Vector2(0, 192)
shape = SubResource("SegmentShape2D_y6csq")

[node name="Limit2" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limit2"]
shape = SubResource("SegmentShape2D_mcn57")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limit2"]
position = Vector2(257, -1)
shape = SubResource("SegmentShape2D_mcn57")

[node name="mancuernas" type="Area2D" parent="."]
position = Vector2(43, 24)
collision_mask = 2

[node name="Mancuernas" type="Sprite2D" parent="mancuernas"]
texture = ExtResource("4_j2yss")

[node name="CollisionShape2D" type="CollisionShape2D" parent="mancuernas"]
shape = SubResource("CapsuleShape2D_2ehvj")

[node name="ButtonDamage" type="Button" parent="mancuernas"]
visible = false
offset_left = -19.0
offset_top = -45.0
offset_right = 23.0
offset_bottom = -25.0
theme = SubResource("Theme_fg3id")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_ftycn")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qkciq")
theme_override_styles/normal = SubResource("StyleBoxTexture_6sedx")
text = "Entrenar"

[node name="Player" parent="." instance=ExtResource("2_q7xv4")]
position = Vector2(114, 169)

[node name="city" type="Area2D" parent="." groups=["transition_areas"]]
position = Vector2(113, 189)

[node name="CollisionShape2D" type="CollisionShape2D" parent="city"]
shape = SubResource("CapsuleShape2D_myhdb")

[node name="Button" type="Button" parent="city"]
visible = false
offset_left = -21.0
offset_top = -37.0
offset_right = 21.0
offset_bottom = -17.0
theme = SubResource("Theme_6cvfi")
theme_override_font_sizes/font_size = 8
theme_override_styles/hover = SubResource("StyleBoxTexture_1sn1x")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ctrdq")
theme_override_styles/normal = SubResource("StyleBoxTexture_5xa0j")
text = "btn_exit"

[connection signal="body_entered" from="mancuernas" to="." method="_on_mancuernas_body_entered"]
[connection signal="body_exited" from="mancuernas" to="." method="_on_mancuernas_body_exited"]
[connection signal="pressed" from="mancuernas/ButtonDamage" to="." method="_on_button_damage_pressed"]
